--- a/web/ourProject.html
+++ b/web/ourProject.html
@@ -13,7 +13,7 @@ Arranged by: Hyangwon (Melissa) Lee
 
 <!--
 Original Page Template  : -
-Initial Code by         : Syend Talha Khamoor (2020.06.14)
+Initial Code by         : Talha Khamoor (2020.06.14)
 Modified by             : Naghmeh Dadgar-Azad () - Retouch overall look&feel
 Description             : This is the 'OUR PROJECT' page. The original customer-toolkit codes provided
                           by Evernym did not contain this page. However, the group decided to include
